//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table vehicle {
  id Int [pk, increment]
  vehicle_name String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  telemetry vehicle_telemetry [not null]
  can_signals can_signal [not null]
  events vehicle_event [not null]
  scores driver_score [not null]
  unsafe_events unsafe_event [not null]
  driver_vehicle driver_vehicle [not null]
}

Table vehicle_telemetry {
  id Int [pk, increment]
  vehicle_id Int [not null]
  source String
  timestamp DateTime [not null]
  lat Float
  long Float
  speed_kmh Float
  heading_deg Float
  engine_on Boolean
  odometer_km Float
  driver_id Int [not null]
  vehicle vehicle [not null]
  driver drivers [not null]
  unsafe_event unsafe_event [not null]
}

Table drivers {
  id Int [pk, increment]
  driver_name String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  vehicle_telemetry vehicle_telemetry [not null]
  driver_vehicle driver_vehicle [not null]
  unsafe_event unsafe_event [not null]
}

Table driver_vehicle {
  id Int [pk, increment]
  vehicle_id Int [not null]
  driver_id Int [not null]
  start_at DateTime
  end_at DateTime
  vehicle vehicle [not null]
  driver drivers [not null]

  indexes {
    (vehicle_id, driver_id) [unique]
  }
}

Table can_signal {
  id Int [pk, increment]
  vehicle_id Int [not null]
  timestamp DateTime [not null]
  signal_name String [not null]
  signal_value Float [not null]
  signal_unit String
  vehicle vehicle [not null]
}

Table vehicle_event {
  id Int [pk, increment]
  vehicle_id Int [not null]
  event_id Int [not null]
  timestamp DateTime [not null]
  lat Float
  long Float
  speed_kmh Float
  fuel_input_liters Float
  total_distance_km Float
  battery_voltage Float
  vehicle vehicle [not null]
  event event [not null]
}

Table unsafe_event {
  id Int [pk, increment]
  vehicle_id Int [not null]
  driver_id Int
  event_id Int [not null]
  severity Severity [not null]
  timestamp DateTime [not null]
  value Float
  threshold Float
  telemetry_id Int
  vehicle vehicle [not null]
  event event [not null]
  driver drivers
  vehicle_telemetry vehicle_telemetry
}

Table event {
  id Int [pk, increment]
  event_type Int [not null]
  event_name String [not null]
  unsafe_event unsafe_event [not null]
  vehicle_event vehicle_event [not null]
}

Table driver_score {
  id Int [pk, increment]
  vehicle_id Int [not null]
  score_date DateTime [not null]
  final_score Float [not null]
  speeding_score Float [not null]
  braking_score Float [not null]
  accel_score Float [not null]
  idle_score Float [not null]
  night_score Float [not null]
  riskClass String [not null]
  vehicle vehicle [not null]
}

Enum Severity {
  LOW
  MEDIUM
  HIGH
}

Ref: vehicle_telemetry.vehicle_id > vehicle.id

Ref: vehicle_telemetry.driver_id > drivers.id

Ref: driver_vehicle.vehicle_id > vehicle.id

Ref: driver_vehicle.driver_id > drivers.id

Ref: can_signal.vehicle_id > vehicle.id

Ref: vehicle_event.vehicle_id > vehicle.id

Ref: vehicle_event.event_id > event.id

Ref: unsafe_event.vehicle_id > vehicle.id

Ref: unsafe_event.event_id > event.id

Ref: unsafe_event.driver_id > drivers.id

Ref: unsafe_event.telemetry_id > vehicle_telemetry.id

Ref: driver_score.vehicle_id > vehicle.id